Use Path to join path segments so a slash is added if needed